--- a/collectors/python.d.plugin/ceph/metadata.yaml
+++ b/collectors/python.d.plugin/ceph/metadata.yaml
@@ -3,7 +3,7 @@ meta:
   module_name: ceph
   monitored_instance:
     name: Ceph
-    link: ''
+    link: 'https://ceph.io/'
     categories:
     - data-collection.storage-mount-points-and-filesystems
     icon_filename: 'ceph.png'
@@ -12,12 +12,15 @@ meta:
       list: []
   info_provided_to_referring_integrations:
     description: ''
-  keywords: []
+  keywords:
+    - ceph
+    - storage
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Monitor Ceph metrics for efficient distributed storage system performance. Keep tabs on cluster health, data redundancy, and latency to ensure reliable storage operations.'
-    method_description: ''
+    metrics_description: |
+      Monitor Ceph metrics for efficient distributed storage system performance. Keep tabs on cluster health, data redundancy, and latency to ensure reliable storage operations. Metrics collected include Cluster statistics (usage, available, latency, objects, read/write rate), OSD usage and latency and Pool statistics (usage, read/write operations, read/write rate, number of objects).`
+    method_description: 'Uses the `rados` python module to connect to a Ceph cluster.'
   supported_platforms:
     include: []
     exclude: []
@@ -26,29 +29,82 @@ overview:
     description: ''
   default_behavior:
     auto_detection:
-      description: ''
+      description: 'The module by default will try to access /etc/ceph/ceph.conf and /etc/ceph/ceph.client.admin.keyring and will try to connect as `admin` to the ceph cluster.'
     limits:
       description: ''
     performance_impact:
       description: ''
 setup:
   prerequisites:
-    list: []
+    list:
+      - title: '`rados` python module'
+        description: 'Make sure the `rados` python module is installed'
+      - title: 'Granting read permissions to ceph group from keyring file'
+        description: 'Execute: `chmod 640 /etc/ceph/ceph.client.admin.keyring`'
+      - title: 'Create a specific rados_id'
+        description: 'You can optionally create a rados_id to use instead of admin'
   configuration:
     file:
-      name: ''
-      description: ''
+      name: python.d/tor.conf
     options:
-      description: ''
+      description: |
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Additionally, the ceph plugin also supports the following: `config_file`, `keyring_file` and `rados_id` inside a JOB definition.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: ''
+        title: "Config options"
         enabled: true
-      list: []
+      list:
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 5
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: ''
+          required: false
+        - name: config_file
+          description: Ceph config file
+          default_value: '/etc/ceph/ceph.conf'
+          required: false
+        - name: keyring_file
+          description: Ceph keyring file. netdata user must be added into ceph group and keyring file must be read group permission.
+          default_value: '/etc/ceph/ceph.client.admin.keyring'
+          required: false
+        - name: rados_id
+          description: A rados user id to use for connecting to the Ceph cluster.
+          default_value: 'admin'
+          required: false
     examples:
       folding:
         enabled: true
-        title: ''
-      list: []
+        title: "Config"
+      list:
+        - name: Basic local Ceph cluster
+          description: A basic configuration to connect to a local Ceph cluster.
+          config: |
+            local:
+            config_file: '/etc/ceph/ceph.conf'
+            keyring_file: '/etc/ceph/ceph.client.admin.keyring'
 troubleshooting:
   problems:
     list: []
