--- a/collectors/ebpf.plugin/multi_metadata.yaml
+++ b/collectors/ebpf.plugin/multi_metadata.yaml
@@ -5,19 +5,25 @@ modules:
       module_name: filedescriptor
       monitored_instance:
         name: eBPF Filedescriptor
-        link: ""
+        link: "https://kernel.org/"
         categories:
           - data-collection.ebpf
         icon_filename: "ebpf.jpg"
       related_resources:
         integrations:
-          list: []
+          list:
+            - plugin_name: apps.plugin
+              module_name: apps
+            - plugin_name: cgroups.plugin
+              module_name: cgroups
       info_provided_to_referring_integrations:
         description: ""
       keywords:
         - file
         - eBPF
         - fd
+        - open
+        - close
       most_popular: false
     overview:
       data_collection:
@@ -28,27 +34,79 @@ modules:
         exclude: []
       multi_instance: true
       additional_permissions:
-        description: ""
+        description: "The plugin needs setuid because it loads data inside kernel."
       default_behavior:
         auto_detection:
-          description: ""
+          description: "It checks kernel compilation flags (CONFIG_KPROBES, CONFIG_BPF, CONFIG_BPF_SYSCALL, CONFIG_BPF_JIT) and presence of BTF files to decide which eBPF program will be attached."
         limits:
           description: ""
         performance_impact:
-          description: ""
+          description: "Depending of kernel version and frequency that files are open and close, this thread will add overhead everytime that an internal kernel function is called. The estimated additional period of time is at between 90-200ms per call on kernels that do not have BTF technology."
     setup:
       prerequisites:
-        list: []
+        list:
+          - title: Compile kernel
+            description: |
+              Check if your kernel was compiled with necessary options (CONFIG_KPROBES, CONFIG_BPF, CONFIG_BPF_SYSCALL, CONFIG_BPF_JIT) in `/proc/config.gz` or inside /boot/config file. Some cited names can be different accoring preferences of Linux distributions.
+              When you do not have options set, it is necessary to get the kernel source code from https://kernel.org or a kernel package from your distribution, this last is preferred. The kernel compilation has a well definedd pattern, but distributions can deliver their configuration files
+              with different names.
+
+              Now follow steps:
+              1. Copy the configuration file to /usr/src/linux/.config.
+              2. Select the necessary options: make oldconfig
+              3. Compile your kernel image: make bzImage
+              4. Compile your modules: make modules
+              5. Copy your new kernel image for boot loader directory
+              6. Install the new modules: make modules_install
+              7. Generate an initial ramdisk image (`initrd`) if it is necessary.
+              8. Update your boot loader
       configuration:
         file:
-          name: ""
-          description: ""
+          name: "ebpf.d/fd.conf"
+          description: "Overwrite default configuration helping to reduce memory usage. You can also select charts visible on dashboard."
         options:
-          description: ""
+          description: |
+            All options are defined inside section `[global]`.
           folding:
-            title: ""
+            title: "Config options"
             enabled: true
-          list: []
+          list:
+            - name: update every
+              description: Data collection frequency.
+              default_value: 5
+              required: false
+            - name: ebpf load mode
+              description: Define whether plugin will monitor the call (`entry`) for the functions or it will also monitor the return (`return`).
+              default_value: entry
+              required: false
+            - name: apps
+              description: Enable or disable integration with apps.plugin
+              default_value: no
+              required: false
+            - name: cgroups
+              description: Enable or disable integration with cgroup.plugin
+              default_value: no
+              required: false
+            - name: pid table size
+              description: Number of elements stored inside hash tables used to monitor calls per PID.
+              default_value: 32768
+              required: false
+            - name: ebpf type format
+              description: "Define the file type to load an eBPF program. Three options are available: `legacy` (Attach only `kprobe`), `co-re` (Plugin tries to use `trampoline` when available), and `auto` (plugin check OS configuration before to load)."
+              default_value: auto
+              required: false
+            - name: ebpf co-re tracing
+              description: "Select the attach method used by plugin when `co-re` is defined in previous option. Two options are available: `trampoline` (Option with lowest overhead), and `probe` (the same of legacy code)."
+              default_value: trampoline
+              required: false
+            - name: maps per core
+              description: Define how plugin will load their hash maps. When enabled (`yes`) plugin will load one hash table per core, instead to have centralized information.
+              default_value: yes
+              required: false
+            - name: lifetime
+              description: Set default lifetime for thread when enabled by cloud.
+              default_value: 300
+              required: false
         examples:
           folding:
             enabled: true
@@ -66,7 +124,7 @@ modules:
       availability: []
       scopes:
         - name: cgroup
-          description: ""
+          description: "These Metrics show grouped information per cgroup."
           labels: []
           metrics:
             - name: cgroup.fd_open
@@ -94,7 +152,7 @@ modules:
               dimensions:
                 - name: close
         - name: global
-          description: ""
+          description: "These metrics show total number of calls executed for the host."
           labels: []
           metrics:
             - name: services.file_open
