--- a/collectors/python.d.plugin/monit/metadata.yaml
+++ b/collectors/python.d.plugin/monit/metadata.yaml
@@ -3,7 +3,7 @@ meta:
   module_name: monit
   monitored_instance:
     name: Monit
-    link: ''
+    link: https://mmonit.com/monit/
     categories:
     - data-collection.synthetic-checks
     icon_filename: 'monit.png'
@@ -12,12 +12,18 @@ meta:
       list: []
   info_provided_to_referring_integrations:
     description: ''
-  keywords: []
+  keywords:
+    - monit
+    - mmonit
+    - supervision tool
+    - monitrc
   most_popular: false
 overview:
   data_collection:
-    metrics_description: 'Monitor Monit performance for optimal system monitoring operations. Monitor system status, process health, and error rates to maintain system stability.'
-    method_description: ''
+    metrics_description: |
+      This collector monitors Monit targets such as filesystems, directories, files, FIFO pipes and more.
+    method_description: |
+      It gathers data from Monit's XML interface.
   supported_platforms:
     include: []
     exclude: []
@@ -26,7 +32,7 @@ overview:
     description: ''
   default_behavior:
     auto_detection:
-      description: ''
+      description: By default, this collector will attempt to connect to Monit at `http://localhost:2812`
     limits:
       description: ''
     performance_impact:
@@ -36,19 +42,87 @@ setup:
     list: []
   configuration:
     file:
-      name: ''
-      description: ''
+      name: 'python.d/monit.conf'
     options:
-      description: ''
+      description: |
+        There are 2 sections:
+
+        - Global variables
+        - One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: ''
+        title: 'Config options'
         enabled: true
-      list: []
+      list:
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 1
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: "local"
+          required: false
+        - name: url
+          description: The URL to fetch Monit's metrics.
+          default_value: http://localhost:2812
+          required: true
+        - name: user
+          description: Username in case the URL is password protected.
+          default_value: ""
+          required: false
+        - name: pass
+          description: Password in case the URL is password protected.
+          default_value: ""
+          required: false
     examples:
       folding:
         enabled: true
-        title: ''
-      list: []
+        title: 'Config'
+      list:
+        - name: Basic
+          description: A basic configuration example.
+          folding:
+            enabled: false
+          config: |
+            localhost:
+              name : 'local'
+              url  : 'http://localhost:2812'
+        - name: Basic Authentication
+          description: Example using basic username and password in order to authenticate.
+          config: |
+            localhost:
+              name : 'local'
+              url  : 'http://localhost:2812'
+              user: 'foo'
+              pass: 'bar'
+        - name: Multi-instance
+          description: |
+            > **Note**: When you define multiple jobs, their names must be unique.
+            
+            Collecting metrics from local and remote instances.
+          config: |
+            localhost:
+              name : 'local'
+              url  : 'http://localhost:2812'
+
+            remote_job:
+              name : 'remote'
+              url  : 'http://192.0.2.1:2812'
 troubleshooting:
   problems:
     list: []
@@ -61,7 +135,7 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: "These metrics refer to the entire monitored application."
     labels: []
     metrics:
     - name: monit.filesystems
