--- a/collectors/python.d.plugin/monit/metadata.yaml
+++ b/collectors/python.d.plugin/monit/metadata.yaml
@@ -5,13 +5,13 @@ meta:
     name: Monit
     link: https://mmonit.com/monit/
     categories:
-    - data-collection.synthetic-checks
-    icon_filename: 'monit.png'
+      - data-collection.synthetic-checks
+    icon_filename: "monit.png"
   related_resources:
     integrations:
       list: []
   info_provided_to_referring_integrations:
-    description: ''
+    description: ""
   keywords:
     - monit
     - mmonit
@@ -29,20 +29,20 @@ overview:
     exclude: []
   multi_instance: true
   additional_permissions:
-    description: ''
+    description: ""
   default_behavior:
     auto_detection:
       description: By default, this collector will attempt to connect to Monit at `http://localhost:2812`
     limits:
-      description: ''
+      description: ""
     performance_impact:
-      description: ''
+      description: ""
 setup:
   prerequisites:
     list: []
   configuration:
     file:
-      name: 'python.d/monit.conf'
+      name: "python.d/monit.conf"
     options:
       description: |
         There are 2 sections:
@@ -54,7 +54,7 @@ setup:
 
         Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: 'Config options'
+        title: "Config options"
         enabled: true
       list:
         - name: update_every
@@ -74,7 +74,8 @@ setup:
           default_value: yes
           required: false
         - name: name
-          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          description: >
+            Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
           default_value: "local"
           required: false
         - name: url
@@ -92,7 +93,7 @@ setup:
     examples:
       folding:
         enabled: true
-        title: 'Config'
+        title: "Config"
       list:
         - name: Basic
           description: A basic configuration example.
@@ -113,16 +114,16 @@ setup:
         - name: Multi-instance
           description: |
             > **Note**: When you define multiple jobs, their names must be unique.
-            
+
             Collecting metrics from local and remote instances.
           config: |
             localhost:
-              name : 'local'
-              url  : 'http://localhost:2812'
+              name: 'local'
+              url: 'http://localhost:2812'
 
             remote_job:
-              name : 'remote'
-              url  : 'http://192.0.2.1:2812'
+              name: 'remote'
+              url: 'http://192.0.2.1:2812'
 troubleshooting:
   problems:
     list: []
@@ -134,79 +135,79 @@ metrics:
   description: ""
   availability: []
   scopes:
-  - name: global
-    description: "These metrics refer to the entire monitored application."
-    labels: []
-    metrics:
-    - name: monit.filesystems
-      description: Filesystems
-      unit: "filesystems"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.directories
-      description: Directories
-      unit: "directories"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.files
-      description: Files
-      unit: "files"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.fifos
-      description: Pipes (fifo)
-      unit: "pipes"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.programs
-      description: Programs statuses
-      unit: "programs"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.services
-      description: Processes statuses
-      unit: "processes"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.process_uptime
-      description: Processes uptime
-      unit: "seconds"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.process_threads
-      description: Processes threads
-      unit: "threads"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.process_childrens
-      description: Child processes
-      unit: "children"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.hosts
-      description: Hosts
-      unit: "hosts"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.host_latency
-      description: Hosts latency
-      unit: "milliseconds"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
-    - name: monit.networks
-      description: Network interfaces and addresses
-      unit: "interfaces"
-      chart_type: line
-      dimensions:
-      - name: a dimension per target
+    - name: global
+      description: "These metrics refer to the entire monitored application."
+      labels: []
+      metrics:
+        - name: monit.filesystems
+          description: Filesystems
+          unit: "filesystems"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.directories
+          description: Directories
+          unit: "directories"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.files
+          description: Files
+          unit: "files"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.fifos
+          description: Pipes (fifo)
+          unit: "pipes"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.programs
+          description: Programs statuses
+          unit: "programs"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.services
+          description: Processes statuses
+          unit: "processes"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.process_uptime
+          description: Processes uptime
+          unit: "seconds"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.process_threads
+          description: Processes threads
+          unit: "threads"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.process_childrens
+          description: Child processes
+          unit: "children"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.hosts
+          description: Hosts
+          unit: "hosts"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.host_latency
+          description: Hosts latency
+          unit: "milliseconds"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
+        - name: monit.networks
+          description: Network interfaces and addresses
+          unit: "interfaces"
+          chart_type: line
+          dimensions:
+            - name: a dimension per target
