--- a/collectors/python.d.plugin/alarms/metadata.yaml
+++ b/collectors/python.d.plugin/alarms/metadata.yaml
@@ -45,15 +45,20 @@ setup:
       description: ''
     options:
       description: |
-        The following options can be defined globally: update_every, autodetection_retry.
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
         title: Config options
         enabled: true
       list:
-        - name: update_every
-          description: Data collection frequency.
-          default_value: 10
-          required: false
         - name: url
           description: Netdata agent alarms endpoint to collect from. Can be local or remote so long as reachable by agent.
           default_value: http://127.0.0.1:19999/api/v1/alarms?all
@@ -80,6 +85,26 @@ setup:
             A "," separated list of words you want to exclude based on alarm name. For example 'cpu,load' would exclude all alarms with "cpu" or "load" in alarm name. Default excludes None.
           default_value: ''
           required: true
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 10
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: ''
+          required: false
     examples:
       folding:
         enabled: true
@@ -132,7 +157,8 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: |
+      These metrics refer to the entire monitored application.
     labels: []
     metrics:
     - name: alarms.status
