--- a/collectors/python.d.plugin/example/metadata.yaml
+++ b/collectors/python.d.plugin/example/metadata.yaml
@@ -47,27 +47,52 @@ setup:
       description: ''
     options:
       description: |
-        The following options can be defined globally: update_every, autodetection_retry.
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
         title: Config options
         enabled: true
       list:
-        - name: update_every
-          description: Data collection frequency.
-          default_value: 1
-          required: false
         - name: num_lines
           description: The number of lines to create.
           default_value: 4
-          required: true
+          required: false
         - name: lower
           description: The lower bound of numbers to randomly sample from.
           default_value: 0
-          required: true
+          required: false
         - name: upper
           description: The upper bound of numbers to randomly sample from.
           default_value: 100
-          required: true
+          required: false
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 1
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: ''
+          required: false
     examples:
       folding:
         enabled: true
@@ -99,7 +124,8 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: |
+      These metrics refer to the entire monitored application.
     labels: []
     metrics:
     - name: example.random
