--- a/collectors/python.d.plugin/fail2ban/metadata.yaml
+++ b/collectors/python.d.plugin/fail2ban/metadata.yaml
@@ -78,11 +78,57 @@ setup:
       name: ''
       description: ''
     options:
-      description: ''
+      description: |
+        There are 2 sections:
+
+        * Global variables
+        * One or more JOBS that can define multiple different instances to monitor.
+
+        The following options can be defined globally: priority, penalty, autodetection_retry, update_every, but can also be defined per JOB to override the global values.
+
+        Additionally, the following table contains all the options that can be configured inside a JOB definition.
+
+        Every configuration JOB starts with a `job_name` value which will appear in the dashboard, unless a `name` parameter is specified.
       folding:
-        title: ''
+        title: Config options
         enabled: true
-      list: []
+      list:
+        - name: log_path
+          description: path to fail2ban.log.
+          default_value: /var/log/fail2ban.log
+          required: false
+        - name: conf_path
+          description: path to jail.local/jail.conf.
+          default_value: /etc/fail2ban/jail.local
+          required: false
+        - name: conf_dir
+          description: path to jail.d/.
+          default_value: /etc/fail2ban/jail.d/
+          required: false
+        - name: exclude
+          description: jails you want to exclude from autodetection.
+          default_value: ''
+          required: false
+        - name: update_every
+          description: Sets the default data collection frequency.
+          default_value: 1
+          required: false
+        - name: priority
+          description: Controls the order of charts at the netdata dashboard.
+          default_value: 60000
+          required: false
+        - name: autodetection_retry
+          description: Sets the job re-check interval in seconds.
+          default_value: 0
+          required: false
+        - name: penalty
+          description: Indicates whether to apply penalty to update_every in case of failures.
+          default_value: yes
+          required: false
+        - name: name
+          description: Job name. This value will overwrite the `job_name` value. JOBS with the same name are mutually exclusive. Only one of them will be allowed running at any time. This allows autodetection to try several alternatives and pick the one that works.
+          default_value: ''
+          required: false
     examples:
       folding:
         enabled: true
@@ -108,7 +154,8 @@ metrics:
   availability: []
   scopes:
   - name: global
-    description: ""
+    description: |
+      These metrics refer to the entire monitored application.
     labels: []
     metrics:
     - name: fail2ban.failed_attempts
